# cross-platform-cmake

./: README.md
app/: CMakeLists.txt  addten.cpp  addten.h
main/: CMakeLists.txt  main.cpp
